--- a/style.css
+++ b/style.css
@@ -1,28 +1,46 @@
 body {
-	background-color: #eee;
+	background-color: #88a9da;
 }
 
 h1 {
-	color: grey;
-	background-color: aquamarine;
+	color: rgb(37, 117, 255);
+	padding: 4px;
+	background-color:  rgb(0, 255, 255);
 	border-style: solid;
-	border-color: darkcyan;
+	border-color: rgb(0, 94, 225);
 	border-radius: 6px;
 	text-align: center;
 	font-size: 60px;
+	font-family: monospace;
+}
+
+img {
+	border-radius: 6px;
 }
 
 .messi1 {
-	color: black;
+	padding: 6px;
+	color: rgb(0, 94, 255);
+	background-color: rgb(0, 255, 255);
+	border-style: solid;
+	border-radius: 8px;
+	border-color: rgb(0, 94, 225);
 	font-size: 25px;
+	font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 }
 
 #messi2 {
-	color: rgb(53, 53, 53);
+	padding: 6px;
+	font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+	color: rgb(0, 94, 255);
 	font-size: 26px;
 }
 
 a {
+	color: #333;
+	padding: 6px;
 	text-decoration: none;
 	font-size: 30px;
+	font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
+
